--- a/portfolio2/index.html
+++ b/portfolio2/index.html
@@ -13,7 +13,7 @@
                 <ul>
                     <li><a href="#home" class="orange">Home</a></li>
                     <li><a href="#about">Acerda de mi</a></li>
-                    <li><a href="#experiencia">Experiencia</a></li>
+                    <li><a href="#experience">Experiencia</a></li>
                     <li><a href="#skills">Mis habilidades</a></li>
                     <li><a href="#portfolio">Mi portafolio</a></li>
                     <li><a href="#contact">Contacto</a></li>
