--- a/portfolio2/index.html
+++ b/portfolio2/index.html
@@ -34,8 +34,7 @@
                         <a href="#" class="twitter"></a>
                     </li>
                 </ul>
-                <figure>
-                </figure>
+                <img src="./logos-imagenes/photo-desktop.png"/>
             </section>
             <div id="box"></div>
         </header>
