--- a/portfolio1/index.html
+++ b/portfolio1/index.html
@@ -10,6 +10,8 @@
     <body>
         <header>
             <nav>
+                <input type="checkbox" id="checkbox"/>
+                <label for="checkbox"></label>
                 <ul>
                     <li><a href="#home" class="active">Home</a></li>
                     <li><a href="#about">Acerca de mí</a></li>
@@ -66,7 +68,7 @@
                     in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.   
                 </p>
-                <a href="#"><img src="./icons/arrow.svg"/><span>Download CV</span></a>
+                <a href="#"><img src="./icons/arrow.svg"/><span>Descargar CV</span></a>
             </section>
             <section id="studies">
                 <h3>Estudios</h3>
