--- a/portfolio1/index.html
+++ b/portfolio1/index.html
@@ -164,5 +164,6 @@
             <span class="author">Aldo Abarca</span>
             <span class="copyright">Hecho con ❤ en <a href="https://academlo.com/">Academlo</a</span>
         </footer>
+        <script src="./js/main.js"></script>
     </body>
 </html>
