--- a/portfolio1/index.html
+++ b/portfolio1/index.html
@@ -100,49 +100,45 @@
             </section>
             <section id="experience">
                 <h3>Experiencia</h3>
-                <ul>
-                    <li>
-                        <img src="./logos-img/wizeline.jpg" alt="Interactive design"/>
-                        <span>Interactive design</span>
-                        <span class="font-bold">1 año</span>
-                    </li>
-                    <li>
-                        <img src="./logos-img/ux-designer.jpg" alt="UX Design"/>
-                        <span>UX/UI Designer<br/></span><br/>
-                        <span class="font-bold">2 años</span>
-                    </li>
-                    <li>
-                        <img src="./logos-img/hootsuite.png" alt="Interactive design"/>
-                        <span>Product designer</span>
-                        <span class="font-bold">1 año</span>
-                    </li>
-                    <li>
-                        <img src="./logos-img/google.png" alt="UI Engineer"/>
-                        <span>UI Engineer</span><br/>
-                        <span class="font-bold">6 meses año</span>
-                    </li>
-                    <li>
-                        <img src="./logos-img/google.png" alt="Frontend and UI Dev"/>
-                        <span>Frontend and UI Dev</span>
-                        <span class="font-bold">6 meses</span>
-                    </li>
-                </ul>
+                <div id="exp-container">
+                    <ul>
+                        <li class="exp">
+                            <img src="./logos-img/wizeline.jpg" alt="Interactive design"/>
+                            <span>Interactive design</span>
+                            <span class="font-bold">1 año</span>
+                        </li>
+                        <li class="exp">
+                            <img src="./logos-img/ux-designer.jpg" alt="UX Design"/>
+                            <span>UX/UI Designer<br/></span><br/>
+                            <span class="font-bold">2 años</span>
+                        </li>
+                        <li class="exp">
+                            <img src="./logos-img/hootsuite.png" alt="Interactive design"/>
+                            <span>Product designer</span>
+                            <span class="font-bold">1 año</span>
+                        </li>
+                        <li class="exp">
+                            <img src="./logos-img/google.png" alt="UI Engineer"/>
+                            <span>UI Engineer</span><br/>
+                            <span class="font-bold">6 meses año</span>
+                        </li>
+                        <li class="exp">
+                            <img src="./logos-img/google.png" alt="Frontend and UI Dev"/>
+                            <span>Frontend and UI Dev</span>
+                            <span class="font-bold">6 meses</span>
+                        </li>
+                    </ul>
+                </div>
+                <button class="btn btn-next"> > </button>
+                <button class="btn btn-prev"> < </button>
             </section>
             <section id="portfolio">
                 <h3>Mi portafolio</h3>
                 <ul>
-                    <li>
-                        <a href="#"><img src="./logos-img/Ejemplo2.png" alt="Website 1"/></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="./logos-img/Ejemplo 1.png" alt="Website 2"/></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="./logos-img/Ejemplo4.png" alt="Website 3"/></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="./logos-img/Ejemplo3.png" alt="Website 4"/></a>
-                    </li>                    
+                    <li><a href="#"><img src="./logos-img/Ejemplo2.png" alt="Website 1"/></a></li>
+                    <li><a href="#"><img src="./logos-img/Ejemplo 1.png" alt="Website 2"/></a></li>
+                    <li><a href="#"><img src="./logos-img/Ejemplo4.png" alt="Website 3"/></a></li>
+                    <li><a href="#"><img src="./logos-img/Ejemplo3.png" alt="Website 4"/></a></li>                    
                 </ul>
             </section>
             <section id="contact">
