--- a/portfolio2/index.html
+++ b/portfolio2/index.html
@@ -10,6 +10,8 @@
     <body>
         <header>
             <nav>
+                <input type="checkbox" id="checkbox"/>
+                <label for="checkbox"></label>
                 <ul>
                     <li><a href="#home" class="orange">Home</a></li>
                     <li><a href="#about">Acerda de mi</a></li>
@@ -24,15 +26,9 @@
                 <p id="info">Lorem ipsun dolor sit amet, cosecteur adipisicing elit.</p>
                 <p id="experiencia"><span class="orange">+5 años</span> de experiencia</p>
                 <ul>
-                    <li>
-                        <a href="#" class="linkedin"></a>
-                    </li>
-                    <li>
-                        <a href="#" class="instagram"></a>
-                    </li>
-                    <li>
-                        <a href="#" class="twitter"></a>
-                    </li>
+                    <li><a href="#" class="linkedin"></a></li>
+                    <li><a href="#" class="instagram"></a></li>
+                    <li><a href="#" class="twitter"></a></li>
                 </ul>
                 <img src="./logos-imagenes/photo-desktop.png"/>
             </section>
@@ -121,5 +117,6 @@
                 <p class="text2">Hecho ❤ con en <a href="https://academlo.com/">Academlo</a></p>
             </footer>
         </main>
+        <script src="./js/main.js"></script>
     </body>
 </html>
